--- a/index.html
+++ b/index.html
@@ -2,51 +2,16 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8" />	
-	<title>Skills Portfolio</title>
+	<title>Steven Willets - Portfolio</title>
 	<meta name="description" content="Welcome to the portfolio of my works, click on the buttons below to view my drawings, writings, charts, or the various foods I make." />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/description.css" />
-	<link rel="stylesheet" href="css/lightbox.css" />
-	<link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<div class="fixed" id="homeborder"></div>	
-	<div class="fixed" id="home"></div>	
 	<header>
-	<!--[if IE]> <div id="header"> <![endif]-->
-		Steven Willets
-	<!--[if IE]> </div> <![endif]-->
+	
     </header>
-	<section id="frame">
-		<!--[if IE]> <div id="frame"> <![endif]-->
-		<!--[if IE]> </div> <![endif]-->
-	</section>
-	<h1 id="subheader">Skills Portfolio</h1>
 	<footer>
-		<ul class="footer" id="homefooter">
-			<li>&#169; Steven Willets, 2013</li>
-			<li><a class="transition" href="aboutme.html">About Me</a></li>
-			<li><a class="transition" href="contact.html">Contact Me</a></li>
-		</ul>
 	</footer>
-	<nav>	
-		<a class="transition" id="drawingsPage" href="drawings.html">
-			<h2>Drawings</h2>
-		</a>
-		<a class="transition" id="writingsPage" href="writings.html">
-			<h2>Writings</h2>
-		</a>
-		<a class="transition" id="chartsPage" href="charts.html">
-			<h2>Charts</h2>
-		</a>
-		<a class="transition" id="ediblesPage" href="edibles.html">
-			<h2>Edibles</h2>
-		</a>
-	</nav>		
-<!--Scripts-->
-	<script src="js/jquery-1.7.2.min.js"></script>
-	<script src="js/script.js"></script>
-  	<script type="text/javascript" src="js/custom.js"></script>
+	
 </body>
 </html>
