--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A Porfolio of my works." />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400|Roboto|Roboto+Condensed">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Krub:400,600"> 
     <link rel="stylesheet" href="/styles/style.css">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -19,7 +19,10 @@
             color: rgb(44, 44, 44);
             line-height: 1.43;
             margin: 0;
-            font-family:'Roboto', Arial, sans-serif;
+            font-family:'Krub', Arial, sans-serif;
+        }
+        h1, h2, h3, h4, h5, strong {
+            font-weight: 600;
         }
         * {
             box-sizing: border-box;
