--- a/index.html
+++ b/index.html
@@ -140,14 +140,29 @@
         <div id="content-wrapper" class="section-wrapper">
             <div class="content-container cf">
                 <div id="side-content">
-                    <section>
+                    <div>
                         <p>Side Bar</p>
-                    </section>
+                    </div>
                 </div>
                 <main id="main-content">
-                    <section>
+                    <div>
                         <p>Main Content</p>
-                    </section>
+                        <div>
+                            <h1>Websites</h1>
+                            <ul>
+                                <li><img src="/images/websites/beta-ticketliquidator.png" /></li>
+                                <li><img src="/images/websites/brianwilson.png" /></li>
+                                <li><img src="/images/websites/corporate-ticketnetwork.png" /></li>
+                                <li><img src="/images/websites/newyorktheatertickets.png" /></li>
+                                <li><img src="/images/websites/onbroadway.png" /></li>
+                                <li><img src="/images/websites/opentable-tickets.png" /></li>
+                                <li><img src="/images/websites/rad-tickets.png" /></li>
+                                <li><img src="/images/websites/revamp.png" /></li>
+                                <li><img src="/images/websites/tickets-ezevent.png" /></li>
+                                <li><img src="/images/websites/wsj-tickets.png" /></li>
+                            </ul>
+                        </div>
+                    </div>
                 </main>
             </div>
         </div>
